[gd_scene load_steps=5 format=3 uid="uid://dylpiupgeou4n"]

[ext_resource type="Script" path="res://abilities/soundblast_ability.gd" id="1_7rlpp"]
[ext_resource type="Texture2D" uid="uid://d37pf3sg0hal0" path="res://assets/textures/Placeholder.png" id="2_fcjv4"]
[ext_resource type="PackedScene" path="res://components/areas/hitbox.tscn" id="2_veowg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0d3mf"]
radius = 64.0

[node name="SoundblastAbility" type="Node2D"]
z_index = -1
script = ExtResource("1_7rlpp")
blast_texture = ExtResource("2_fcjv4")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0, 0.658824, 0.945098, 0.294118)
scale = Vector2(6, 6)

[node name="Hitbox" parent="." instance=ExtResource("2_veowg")]
collision_layer = 32
collision_mask = 16

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource("CircleShape2D_0d3mf")
disabled = true

[node name="ActiveTimer" type="Timer" parent="."]

[node name="CooldownTimer" type="Timer" parent="."]

[connection signal="timeout" from="ActiveTimer" to="." method="_on_active_timer_timeout"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]

[editable path="Hitbox"]
